feat(helm-chart): [KDL6-261] kdl-server upgrade 6.2.0 (#27)

--- a/charts/kdl-server/crds/project-operator-crd.yaml
+++ b/charts/kdl-server/crds/project-operator-crd.yaml
@@ -76,6 +76,12 @@ spec:
                   complete control over the resource naming, replacing the default naming
                   convention entirely.
                 type: string
+              inputData:
+                description: "Optional key-value pairs for storing arbitrary data"
+                type: object
+                additionalProperties:
+                  type: string
+                nullable: true
               projectId:
                 description: |
                   Unique identifier for the KDL project. This ID is used across all
