--- a/charts/kdl-server/templates/server/configmap.yaml
+++ b/charts/kdl-server/templates/server/configmap.yaml
@@ -10,26 +10,24 @@ metadata:
 data:
   ##
   # KDL APP configuration
-  KDL_SERVER_PORT: {{ .Values.env.KDL_SERVER_PORT | default (int .Values.service.targetPort | default .Values.service.port) | quote }}
-  BASE_DOMAIN_NAME: {{ .Values.global.domain }}
-  SHARED_VOLUME: {{ .Values.sharedVolume.name }}
-
-  TLS_ENABLED: "{{ .Values.global.ingress.tls.enabled }}"
-
   config.json: |+
     {
       "DESCRIPTION_MIN_WORDS": {{ default "50" .Values.knowledgeGalaxy.config.descriptionMinWords }},
       "KG_SERVER_URL": "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/kg",
       "KNOWLEDGE_GALAXY_ENABLED": {{ .Values.knowledgeGalaxy.enabled }},
-      "RELEASE_VERSION": "{{ .Chart.AppVersion }}",
+      "RELEASE_VERSION": "{{ .Chart.Version }}v{{ .Chart.AppVersion }}",
       "SERVER_NAME": "{{ .Values.global.serverName }}",
       "SERVER_URL": "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}"
     }
 
   ##
-  # KDL URL Setup
+  # Project Operator
   PROJECT_FILEBROWSER_URL: "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/filebrowser/PROJECT_ID/"
   PROJECT_MLFLOW_URL: "{{ include "http.protocol" . }}://kdlapp.{{ .Values.global.domain }}/mlflow/PROJECT_ID/"
+
+  ##
+  # User Tools Operator (deprecate)
+  USER_TOOLS_VSCODE_URL: "{{ include "http.protocol" . }}://USERNAME-code.{{ .Values.global.domain }}/?folder=/home/coder/repos/REPO_FOLDER"
 
   ##
   # Knowledge Galaxy
