--- a/charts/kdl-server/templates/server/deployment.yaml
+++ b/charts/kdl-server/templates/server/deployment.yaml
@@ -18,7 +18,6 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/kdl-project-operator-template: {{ include (print $.Template.BasePath "/server/configmap-project-operator.yaml") . | sha256sum }}
         checksum/kdl-config: {{ include (print $.Template.BasePath "/server/configmap.yaml") . | sha256sum }}
         checksum/kdl-secret: {{ include (print $.Template.BasePath "/server/secret.yaml") . | sha256sum }}
       {{- with .Values.podAnnotations }}
@@ -91,7 +90,7 @@ spec:
           {{- end }}
           ports:
             - name: http
-              containerPort: {{ .Values.env.KDL_SERVER_PORT | default (int .Values.service.targetPort | default .Values.service.port) }}
+              containerPort: {{ .Values.env.KDL_SERVER_PORT | default (.Values.service.targetPort | default .Values.service.port) }}
               protocol: TCP
             {{- range $port := .Values.service.extraPorts }}
             - name: {{ $port.name }}
@@ -158,12 +157,12 @@ spec:
             {{- end }}
           env:
             # Default environment
-            - name: SSH_KNOWN_HOSTS
-              value: /app/.ssh/known_hosts
             - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: SSH_KNOWN_HOSTS
+              value: /app/.ssh/known_hosts
             # This variable uses on KDL API to load configMap
             # to operators: <release-name>-server-project-template
             - name: RELEASE_NAME
@@ -176,6 +175,8 @@ spec:
                   fieldPath: metadata.labels['app.kubernetes.io/version']
             - name: RELEASE_CHART_VERSION
               value: {{ .Chart.Version | quote }}
+            - name: KDL_SERVER_PORT
+              value: {{ .Values.env.KDL_SERVER_PORT | default (.Values.service.targetPort | default .Values.service.port) | quote }}
             # Variables from secrets have precedence
             {{- $envList := dict }}
             {{- if .Values.envFromSecrets }}
