--- a/charts/kdl-server/templates/user-tools-operator/clusterrole-user-tools-operator.yaml
+++ b/charts/kdl-server/templates/user-tools-operator/clusterrole-user-tools-operator.yaml
@@ -22,6 +22,13 @@ rules:
   - events
   verbs: ["*"]
 
+# Roles
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources:
+  - roles
+  - rolebindings
+  verbs: ["*"]
+
 # Workload
 - apiGroups: ["apps"]
   resources:
