feat(kai): [KAI-220] migrate current release

--- a/charts/kdl-server/Chart.yaml
+++ b/charts/kdl-server/Chart.yaml
@@ -24,23 +24,23 @@ keywords:
 dependencies:
   - name: konstellation-base
     alias: keycloak
-    version: 1.1.2
+    version: "1.1.2"
     repository: oci://ghcr.io/konstellation-io/helm-charts
     condition: keycloak.enabled
   - name: minio
-    version: 3.2.0
+    version: "3.2.0"
     repository: https://charts.min.io
     condition: minio.enabled
   - name: mongodb
-    version: 16.2.1
+    version: "16.2.1"
     repository: oci://registry-1.docker.io/bitnamicharts
     condition: mongodb.enabled
   - name: oauth2-proxy
     alias: oauth2proxy
-    version: 7.7.28
+    version: "7.7.28"
     repository: oci://ghcr.io/oauth2-proxy/charts
     condition: oauth2proxy.enabled
   - name: postgresql
-    version: 15.5.38
+    version: "15.5.38"
     repository: oci://registry-1.docker.io/bitnamicharts
     condition: postgresql.enabled
