--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -40,7 +40,16 @@ jobs:
       - name: Add repositories
         run: |
           for dir in $(ls -d charts/*/); do
-            helm dependency list $dir 2> /dev/null | grep -v 'oci://' | tail +2 | head -n -1 | awk '{ print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
+              helm dependency list $dir 2> /dev/null | \
+              grep -v 'oci://' | \
+              tail +2 | \
+              head -n -1 | \
+              awk '{ print $1 " " $3 }' | \
+              while read -r repo url; do
+                  if ! helm repo list | grep -q "^${repo}[[:space:]]"; then
+                      helm repo add "$repo" "$url"
+                  fi
+              done
           done
 
       # See https://github.com/helm/chart-releaser#config-file
