--- a/charts/kdl-server/values.yaml
+++ b/charts/kdl-server/values.yaml
@@ -419,54 +419,6 @@ volumeMounts: []
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
-# -- Persistent Volume configuration
-# </br> Ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/
-persistentVolume:
-  # -- Enable or disable persistence
-  enabled: false
-
-  # -- Persistent Volume access modes
-  # Must match those of existing PV or dynamic provisioner
-  # </br> Ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
-  accessModes:
-    - ReadWriteOnce
-
-  # -- Persistent Volume annotations
-  annotations: {}
-
-  # -- Persistent Volume labels
-  labels: {}
-
-  # -- Persistent Volume size
-  size: 8Gi
-
-  # -- Persistent Volume Storage Class
-  # If defined, storageClassName: <storageClass>
-  # If set to "-", storageClassName: "", which disables dynamic provisioning
-  # If undefined (the default) or set to null, no storageClassName spec is
-  #   set, choosing the default provisioner.  (gp2 on AWS, standard on
-  #   GKE, AWS & OpenStack)
-  storageClass: ""
-
-  # -- Persistent Volume Binding Mode
-  # If defined, volumeBindingMode: <volumeBindingMode>
-  # If undefined (the default) or set to null, no volumeBindingMode spec is
-  # set, choosing the default mode.
-  volumeBindingMode: ""
-
-  # -- Persistent Volume Claim Selector
-  # Useful if Persistent Volumes have been provisioned in advance
-  # </br> Ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/#selector
-  selector: {}
-    # matchLabels:
-    #   release: "stable"
-    # matchExpressions:
-    #   - { key: environment, operator: In, values: [ dev ] }
-
-  # -- Persistent Volume Name
-  # Useful if Persistent Volumes have been provisioned in advance and you want to use a specific one
-  volumeName: ""
-
 # -- Node labels for pod assignment
 # </br> Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
 nodeSelector: {}
@@ -1384,7 +1336,7 @@ sharedVolume:
   # If undefined (the default) or set to null, no storageClassName spec is
   #   set, choosing the default provisioner.  (gp2 on AWS, standard on
   #   GKE, AWS & OpenStack)
-  storageClass: ""
+  storageClassName: ""
 
   # -- Persistent Volume Binding Mode
   # If defined, volumeBindingMode: <volumeBindingMode>
