--- a/charts/kdl-server/templates/server/ingress.yaml
+++ b/charts/kdl-server/templates/server/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := printf "%s-server" (include "kdl-server.fullname" .) -}}
+{{- $fullName := printf "%s" (include "kdl-server.server.name" .) -}}
 {{- $svcPort := .Values.service.port -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
